Upgrade to Android Studio 3.0-rc2 & code cleanup
Signed-off-by: Jack Cheung <jack.cheung@101medialab.com>

--- a/slideOutMenu/app/build.gradle
+++ b/slideOutMenu/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion project.ANDROID_BUILD_SDK_VERSION as int
+    buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
 
     defaultConfig {
         applicationId "mxh.kickassmenu"
-        minSdkVersion 16
-        targetSdkVersion 23
+        minSdkVersion project.ANDROID_BUILD_MIN_SDK_VERSION as int
+        targetSdkVersion project.ANDROID_BUILD_TARGET_SDK_VERSION
         versionCode 1
         versionName "1.0"
     }
